Update README and pom.xml